@@ -1,3 +1,3 @@
 #ifndef KPPPVERSION
-#define KPPPVERSION "1.6.11 (Release 191)"
+#define KPPPVERSION "1.6.12"
 #endif
